--- a/Tetris_2021.vcxproj
+++ b/Tetris_2021.vcxproj
@@ -106,6 +106,7 @@
     </ClCompile>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="AI.cpp" />
     <ClCompile Include="Board.cpp" />
     <ClCompile Include="Bomb.cpp" />
     <ClCompile Include="gotoxy.cpp" />
@@ -125,6 +126,7 @@
     <ClCompile Include="Zshape.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="AI.h" />
     <ClInclude Include="Board.h" />
     <ClInclude Include="Bomb.h" />
     <ClInclude Include="GameObjects.h" />
