--- a/Tetris_2021.vcxproj
+++ b/Tetris_2021.vcxproj
@@ -145,6 +145,9 @@
     <ClInclude Include="TopBoard.h" />
     <ClInclude Include="Zshape.h" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="cpp.hint" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
